--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,25 @@
 server:
-  port: 8080
+    port: 8080
 
 spring:
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/ecommerce
-    username: root
-    password: fighting
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
+    datasource:
+        driver-class-name: org.mariadb.jdbc.Driver
+        url: jdbc:mariadb://localhost:3306/ecommerce
+        username: root
+        password: fighting
+    jpa:
+        hibernate:
+            ddl-auto: update
+        properties:
+            hibernate:
+                show_sql: true
+                format_sql: true
+
 logging:
-  level:
-    org.hibernate.SQL: debug
+    level:
+        org.hibernate.SQL: debug
+
+hae:
+    inner-token: dummy
+    service:
+        product.url: http://localhost:8080
