레거시 연동 Controller 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,10 @@ spring:
             ddl-auto: update
         properties:
             hibernate:
+                metadata_builder_contributor: com.hyundaiautoever.haeproduct.infrastructure.jpa.mariadb.ApplySQLFunction
                 show_sql: true
                 format_sql: true
+        open-in-view: false
     rabbitmq:
         host: localhost
         port: 5672
